--- a/src/app/home/html/home.html
+++ b/src/app/home/html/home.html
@@ -1,1 +1,12 @@
-home.html
+
+<div class="container">
+	<div class="row">
+		<div class="col-md-12">
+			<h1>Home</h1>
+			<p>
+				Welcome to my homepage.
+			</p>
+			<div ng-bind="homeVM.greeting"></div>
+		</div>
+	</div>
+</div>
