--- a/src/app/home/html/home.html
+++ b/src/app/home/html/home.html
@@ -2,7 +2,7 @@
 <div class="container">
 	<div class="row">
 		<div class="col-md-12">
-			<h1>Home</h1>
+			<h1 class="animated slideInLeft">Home</h1>
 			<p>
 				Welcome to my homepage.
 			</p>
