--- a/src/app/shared/scss/navbar.scss
+++ b/src/app/shared/scss/navbar.scss
@@ -1,5 +1,6 @@
-.header { background: grey; height: 45px; }
-.header a { line-height: 45px; font-family: OpenSans-SemiBold; color: white; cursor: pointer; text-decoration: none; }
-.header a:hover { color: #ecf0f1; text-decoration: none; }
+.header { background: grey; height: 45px; text-align: center; }
+.header a { line-height: 45px; font-family: OpenSans-SemiBold; color: white; cursor: pointer; text-decoration: none; text-transform: uppercase; text-shadow: 1px 1px 1px #000; 
+transition: .5s all; }
+.header a:hover { color: #ecf0f1; text-decoration: none; transition: 1s all; letter-spacing: .2em; }
 .header a.active { color: #ecf0f1; }
 
