--- a/src/app/resume/scss/resume.scss
+++ b/src/app/resume/scss/resume.scss
@@ -1,7 +1,8 @@
 .resume {
 	.technologies { padding-bottom: 45px; }
 
+	.hero { margin-bottom: 64px; }
+
 	h2 { margin-top: 40px; }
-	ul { padding-left: 0; }
-	ul li { list-style-type: none; display: inline-block; margin-right: 20px; font-family: OpenSans-Regular;}
+	
 }
