--- a/src/app/shared/scss/navbar.scss
+++ b/src/app/shared/scss/navbar.scss
@@ -1,9 +1,10 @@
 .navbar { background: grey; height: 45px; text-align: left; }
-.navbar a { line-height: 45px; font-family: OpenSans-SemiBold; color: white; cursor: pointer; text-decoration: none; 
+.navbar a { line-height: 45px; font-family: OpenSans-SemiBold; color: #CCCCCC; cursor: pointer; text-decoration: none; 
 	text-transform: uppercase; text-shadow: 1px 1px 1px #000; 
  }
-.navbar a:hover { color: #ecf0f1; text-decoration: none; }
-.navbar a.active { color: #ecf0f1; }
+.navbar a:hover { color: #ecf0f1; text-decoration: none; transition: 1s all; }
+.navbar a.active { color: white; }
+.logo { display: inline-block; font-size: 1.5em; letter-spacing: .1em; }
 
 
 
