--- a/src/app/about/html/about.html
+++ b/src/app/about/html/about.html
@@ -1,11 +1,9 @@
-<div class="container">
-	<div class="row">
-		<div class="col-md-12">
-			<h1>About</h1>
-			<p>
-				Welcome to my about.
-			</p>
-			<div ng-bind="aboutVM.greeting"></div>
+<section class="hero">
+	<div class="container"> 
+		<div class="row">
+			<div class="col-md-12">
+				<h1>About</h1>
+			</div>
 		</div>
 	</div>
-</div>
+</section>
