--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,16 @@
+h1 {
+  font-family: OpenSans-Bold;
+  margin: 0; }
+
+.hero {
+  height: 320px;
+  background: url("../content/images/clouds.jpeg");
+  background-size: cover;
+  background-position-y: 460px; }
+
+.hero h1 {
+  line-height: 320px; }
+
 .resume .technologies {
   padding-bottom: 45px; }
 
@@ -113,7 +126,8 @@ p {
 .navbar {
   background: grey;
   height: 45px;
-  text-align: left; }
+  text-align: left;
+  margin-bottom: 0; }
 
 .navbar a {
   line-height: 45px;
