added placeholder content to about page

--- a/src/app/about/html/about.html
+++ b/src/app/about/html/about.html
@@ -1,8 +1,80 @@
-<section class="hero">
-	<div class="container"> 
+<section class="about">
+	<div class="hero">
+		<div class="container"> 
+			<div class="row">
+				<div class="col-md-12">
+					<h1>About</h1>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
+<section class="background">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6 vcenter">
+				<h3>Background</h3>
+				<p>
+					Lorem ipsum dolor sit amet, nec liber scriptorem no. At mea urbanitas dissentiunt, vix cu mutat feugait maluisset. Ne qui tota vocent oporteat, cum ea malorum philosophia. 
+				</p>
+				<p>
+					Lorem ipsum dolor sit amet, nec liber scriptorem no. At mea urbanitas dissentiunt, vix cu mutat feugait maluisset. Ne qui tota vocent oporteat, cum ea malorum philosophia. An nec exerci graeco, eos essent eripuit mnesarchum ea, pro mutat solum at. Vitae molestiae dissentias vix ex
+				</p>
+				<p>
+					Lorem ipsum dolor sit amet, nec liber scriptorem no. At mea urbanitas dissentiunt, vix cu mutat feugait maluisset. Ne qui tota vocent oporteat, cum ea malorum philosophia. An nec exerci graeco, eos essent eripuit mnesarchum ea, pro mutat solum at. Vitae molestiae dissentias vix ex, nam ancillae sensibus mnesarchum ne. Eripuit iracundia reprimique vix at, probo ancillae te his
+				</p>	
+				<p>
+					Lorem ipsum dolor sit amet, nec liber scriptorem no. At mea urbanitas dissentiunt, vix cu mutat feugait maluisset. Ne qui tota vocent oporteat, cum ea malorum philosophia. An nec exerci graeco, eos essent eripuit mnesarchum ea, pro mutat solum at. Vitae molestiae dissentias vix ex
+				</p>
+			</div><!--
+		 --><div class="col-md-6 image-container vcenter">
+				<div class="image"></div>
+			</div>
+		</div>
+	</div>
+</section>
+
+<section class="programming">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6 image-container vcenter">
+				<div class="image"></div>
+			</div><!--
+			--><div class="col-md-6 vcenter">
+				<h3>Programming</h3>
+				<p>
+					Lorem ipsum dolor sit amet, nec liber scriptorem no. At mea urbanitas dissentiunt, vix cu mutat feugait maluisset. Ne qui tota vocent oporteat, cum ea malorum philosophia. 
+				</p>
+				<p>
+					Lorem ipsum dolor sit amet, nec liber scriptorem no. At mea urbanitas dissentiunt, vix cu mutat feugait maluisset. Ne qui tota vocent oporteat, cum ea malorum philosophia. An nec exerci graeco, eos essent eripuit mnesarchum ea, pro mutat solum at. Vitae molestiae dissentias vix ex
+				</p>
+				<p>
+					Lorem ipsum dolor sit amet, nec liber scriptorem no. At mea urbanitas dissentiunt, vix cu mutat feugait maluisset. Ne qui tota vocent oporteat, cum ea malorum philosophia. An nec exerci graeco, eos essent eripuit mnesarchum ea, pro mutat solum at. Vitae molestiae dissentias vix ex, nam ancillae sensibus mnesarchum ne. Eripuit iracundia reprimique vix at, probo ancillae te his
+				</p>	
+				<p>
+					Lorem ipsum dolor sit amet, nec liber scriptorem no. At mea urbanitas dissentiunt, vix cu mutat feugait maluisset. Ne qui tota vocent oporteat, cum ea malorum philosophia. An nec exerci graeco, eos essent eripuit mnesarchum ea, pro mutat solum at. Vitae molestiae dissentias vix ex
+				</p>
+			</div>
+		</div>
+	</div>
+</section>
+
+<section class="contact">
+	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
-				<h1>About</h1>
+				<h3>Contact</h3>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-12">
+				<p>
+					LinkdIn:
+				</p>
+				<p>
+					Email:
+				</p>
 			</div>
 		</div>
 	</div>
