--- a/src/app/about/scss/about.scss
+++ b/src/app/about/scss/about.scss
@@ -1,7 +1,36 @@
-h1 { font-family: OpenSans-Bold; margin: 0; }
-.hero { height: 320px;
-	background: url('../content/images/clouds.jpeg');
-	background-size: cover;	
-	background-position-y: 460px;
+.about {
+	h1 { font-family: OpenSans-Bold; margin: 0; }
+	.hero { height: 320px;
+		background: url('../content/images/clouds.jpeg');
+		background-size: cover;	
+		background-position-y: 460px;
+	}
+	.hero h1 { line-height: 320px; }
 }
-.hero h1 { line-height: 320px; }
+
+.background, 
+.programming,
+.contact { background: #f6f6f6; padding-top: 64px; padding-bottom: 64px; }
+h3 { margin-bottom: 35px; margin-top: 32px;  }
+
+
+.vcenter { float: none; display: inline-block; vertical-align: middle; }
+
+.background p { line-height: 24px; color: #444444; }
+.background .image-container { text-align: center; }
+.background .image-container .image { width: 350px; height: 350px; border-radius: 50%; display: inline-block;
+	background: url('../content/images/profile.jpg');
+	background-size: cover;
+}
+
+
+.programming { background: #f1f1f1; } 
+.programming p { line-height: 24px; color: #444444; }
+.programming .image-container { text-align: center; } 
+.programming .image-container .image { width: 350px; height: 350px; border-radius: 50%; display: inline-block;
+	background: url('../content/images/desk.jpg');
+	background-size: cover;
+	background-position-y: -90px;
+}
+
+
