added picture for home page

--- a/src/app/home/html/home.html
+++ b/src/app/home/html/home.html
@@ -1,12 +1,10 @@
-
-<div class="container">
-	<div class="row">
-		<div class="col-md-12">
-			<h1>Home</h1>
-			<p>
-				Welcome to my homepage.
-			</p>
-			<div ng-bind="homeVM.greeting"></div>
+<section class="home">
+	<div class="container"> 
+		<div class="row">
+			<div class="col-md-12 vcenter">
+				<h1> Home</h1>
+				<p>Welcome to my homepage</p>
+			</div>
 		</div>
 	</div>
-</div>
+</section>
