--- a/src/main.css
+++ b/src/main.css
@@ -61,6 +61,15 @@ h3 {
   background-size: cover;
   background-position-y: -90px; }
 
+.home {
+  height: 320px;
+  background: url("../content/images/bird.jpeg");
+  background-size: cover;
+  background-position-y: -90px; }
+
+h1 {
+  margin-top: 82px; }
+
 .resume .technologies {
   padding-bottom: 45px; }
 
@@ -174,10 +183,12 @@ p {
   font-family: OpenSans-Regular; }
 
 .navbar {
-  background: grey;
   height: 45px;
   text-align: left;
-  margin-bottom: 0; }
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  width: 100%; }
 
 .navbar a {
   line-height: 45px;
