added hero images to all pages

--- a/src/app/about/scss/about.scss
+++ b/src/app/about/scss/about.scss
@@ -1,9 +1,9 @@
 .about {
 	h1 { font-family: OpenSans-Bold; margin: 0; }
 	.hero { height: 320px;
-		background: url('../content/images/clouds.jpeg');
+		background: url('../content/images/coffee.jpg');
 		background-size: cover;	
-		background-position-y: 460px;
+		background-position-y: 723px;
 	}
 	.hero h1 { line-height: 320px; }
 }
@@ -32,5 +32,4 @@ h3 { margin-bottom: 35px; margin-top: 32px;  }
 	background-size: cover;
 	background-position-y: -90px;
 }
-
 
