--- a/src/app/contact/html/contact.html
+++ b/src/app/contact/html/contact.html
@@ -1,11 +1,11 @@
-<div class="container">
-	<div class="row">
-		<div class="col-md-12">
-			<h1>Contact</h1>
-			<p>
-				Welcome to my contact.
-			</p>
-			<div ng-bind="contactVM.greeting"></div>
+<section class="contacts">
+	<div class="hero">
+		<div class="container"> 
+			<div class="row">
+				<div class="col-md-12">
+					<h1>Contact</h1>
+				</div>
+			</div>
 		</div>
 	</div>
-</div>
+</section>
