--- a/src/app/home/html/home.html
+++ b/src/app/home/html/home.html
@@ -1,10 +1,13 @@
-<section class="home">
-	<div class="container"> 
-		<div class="row">
-			<div class="col-md-12 vcenter">
-				<h1> Home</h1>
-				<p>Welcome to my homepage</p>
+<div class="home-container">
+	<section class="home">
+			<div class="container"> 
+				<div class="row">
+					<div class="col-md-12 vcenter">
+						<h1> Home</h1>
+						<p>Welcome to my homepage</p>
+					</div>
+				</div>
 			</div>
-		</div>
-	</div>
-</section>
+	</section>
+</div>
+
