--- a/src/app/projects/html/projects.html
+++ b/src/app/projects/html/projects.html
@@ -1,11 +1,15 @@
-<div class="container">
-	<div class="row">
-		<div class="col-md-12">
-			<h1>Projects</h1>
-			<p>
-				Welcome to my projects.
-			</p>
-			<div ng-bind="projectsVM.greeting"></div>
+<section class="projects">
+	<div class="hero">
+		<div class="container"> 
+			<div class="row">
+				<div class="col-md-12">
+					<h1>Projects</h1>
+					<p>
+						welcome to my projects
+					</p>
+					<div ng-bind="projectsVM.greeting"></div>
+				</div>
+			</div>
 		</div>
-	</div>
-</div>
+	</div>	
+</section>
