--- a/src/app/home/scss/home.scss
+++ b/src/app/home/scss/home.scss
@@ -1,8 +1,21 @@
-.home { height: 320px; 
-  background: url('../content/images/bird.jpeg'); 
+.home-container {
+background: url('../content/images/mac.jpg'); 
   background-size: cover;
-  background-position-y: -90px;
+  background-repeat: no-repeat; 
+  background-position: center center;
+  width: 100%; height: 100%; 
+  display: block;
+  top: 0; 
+  left: 0; 
+  
+  position: absolute;
+}
+
+.home { 
+  height: 100%; 
+  background-color: black;
+  opacity: .25;
+
 }
 
 h1 { margin-top: 82px; }
-
