--- a/src/app/resume/scss/resume.scss
+++ b/src/app/resume/scss/resume.scss
@@ -1,8 +1,10 @@
-.resume {
-	.technologies { padding-bottom: 45px; }
-
-	.hero { margin-bottom: 64px; }
-
-	h2 { margin-top: 40px; }
-	
+.resume { 
+	h1 { font-family: OpenSans-Bold; margin: 0; }
+	.hero { height: 320px;
+		background: url('../content/images/book.jpg');
+		background-size: cover;	
+		background-position-y: 430px;
+	}
+	.hero h1 { line-height: 320px; }
 }
+
