--- a/src/main.css
+++ b/src/main.css
@@ -4,9 +4,9 @@
 
 .about .hero {
   height: 320px;
-  background: url("../content/images/clouds.jpeg");
+  background: url("../content/images/coffee.jpg");
   background-size: cover;
-  background-position-y: 460px; }
+  background-position-y: 723px; }
 
 .about .hero h1 {
   line-height: 320px; }
@@ -61,23 +61,64 @@ h3 {
   background-size: cover;
   background-position-y: -90px; }
 
-.home {
+.contacts h1 {
+  font-family: OpenSans-Bold;
+  margin: 0; }
+
+.contacts .hero {
   height: 320px;
-  background: url("../content/images/bird.jpeg");
+  background: url("../content/images/iphone2.jpg");
   background-size: cover;
-  background-position-y: -90px; }
+  background-position-y: 1395px; }
+
+.contacts .hero h1 {
+  line-height: 320px; }
+
+.home-container {
+  background: url("../content/images/mac.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  display: block;
+  top: 0;
+  left: 0;
+  position: absolute; }
+
+.home {
+  height: 100%;
+  background-color: black;
+  opacity: .25; }
 
 h1 {
   margin-top: 82px; }
 
-.resume .technologies {
-  padding-bottom: 45px; }
+.projects h1 {
+  font-family: OpenSans-Bold;
+  margin: 0; }
+
+.projects .hero {
+  height: 320px;
+  background: url("../content/images/code.jpg");
+  background-size: cover;
+  background-position-y: 729px; }
+
+.projects .hero h1 {
+  line-height: 320px; }
+
+.resume h1 {
+  font-family: OpenSans-Bold;
+  margin: 0; }
 
 .resume .hero {
-  margin-bottom: 64px; }
+  height: 320px;
+  background: url("../content/images/book.jpg");
+  background-size: cover;
+  background-position-y: 430px; }
 
-.resume h2 {
-  margin-top: 40px; }
+.resume .hero h1 {
+  line-height: 320px; }
 
 .circle {
   display: inline-block;
