added content for home page

--- a/src/app/home/html/home.html
+++ b/src/app/home/html/home.html
@@ -1,13 +1,25 @@
-<div class="home-container">
-	<section class="home">
-			<div class="container"> 
-				<div class="row">
-					<div class="col-md-12 vcenter">
-						<h1> Home</h1>
-						<p>Welcome to my homepage</p>
-					</div>
-				</div>
-			</div>
+<div class="home">
+
+	<section class="hero">
+		<div class="content"> 
+			<h1> 
+				Yanwen Wang
+			</h1>
+			<div class="image"></div>	
+			<h4> 
+				Front End Developer
+			</h4>
+			<p>
+				LinkedIn:
+			</p>
+			<p>
+				Github:
+			</p>
+			<p>
+				Email:
+			</p>
+		</div>
 	</section>
+
 </div>
 
