--- a/src/app/home/scss/home.scss
+++ b/src/app/home/scss/home.scss
@@ -1,21 +1,37 @@
-.home-container {
-background: url('../content/images/mac.jpg'); 
+.home {
+
+  .hero {
+  background: url('../content/images/skyline.jpg'); 
+  height: 790px;
   background-size: cover;
-  background-repeat: no-repeat; 
-  background-position: center center;
-  width: 100%; height: 100%; 
-  display: block;
-  top: 0; 
-  left: 0; 
+  text-align: center;
+  position: relative;
   
+  }
+}
+
+.content {
   position: absolute;
+  display: inline-block;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-.home { 
-  height: 100%; 
-  background-color: black;
-  opacity: .25;
 
+.content h4 { margin-top: 32px; }
+
+.content p { margin-top: 32px; }
+
+.content .image { 
+  margin-top: 32px;
+  display: inline-block;
+  border-radius: 50%;
+  background: white;
+  height: 100px; 
+  width: 100px;
+  background-position-y: 658px;
 }
 
-h1 { margin-top: 82px; }
+
+
