added more content for home page

--- a/src/app/home/html/home.html
+++ b/src/app/home/html/home.html
@@ -21,5 +21,28 @@
 		</div>
 	</section>
 
+	<section class="backgrounds">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6 content-container">
+					<div class="content">
+						<h3>
+							Background
+						</h3>
+						<p>
+							Lorem ipsum dolor sit amet, alii intellegam nec ea, exerci convenire in has. Ut voluptaria omittantur deterruisset ius, usu nihil adipisci ea, ea veniam bonorum offendit eum. Eos ex dicam facilis scribentur, vel graeci deserunt ne. Ne est denique oportere, has malis laudem laoreet ea, delenit consequuntur id est. Mei exerci probatus perfecto cu, nec aperiri legendos urbanitas no. Ne cum mazim veniam, cum aeque feugiat quaerendum an. Sed sumo zril at.
+						</p>
+						<p>
+							Lobortis similique referrentur per cu. Vim ut virtute offendit voluptaria, no eos eros persecuti. Solet urbanitas ius in. Vidisse accusam ut vel.
+						</p>
+					</div>
+				</div>
+				<div class="col-md-6 image-container">
+					<div class="image"></div>
+				</div>
+			</div>
+		</div>
+	</section>
+
 </div>
 
