--- a/src/app/home/scss/home.scss
+++ b/src/app/home/scss/home.scss
@@ -1,37 +1,74 @@
 .home {
-
   .hero {
-  background: url('../content/images/skyline.jpg'); 
-  height: 790px;
-  background-size: cover;
-  text-align: center;
-  position: relative;
+    background: url('../content/images/skyline.jpg'); 
+    height: 790px;
+    background-size: cover;
+    text-align: center;
+    position: relative;
   
+    .content {
+      position: absolute;
+      display: inline-block;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+
+    .content h4 { margin-top: 32px; }
+    .content p { margin-top: 32px; }
+
+    .content .image { 
+      margin-top: 32px;
+      display: inline-block;
+      border-radius: 50%;
+      background: white;
+      height: 100px; 
+      width: 100px;
+      background-position-y: 658px;
+    }
   }
 }
 
-.content {
-  position: absolute;
-  display: inline-block;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+
+.backgrounds { 
+  height: 640px;
+
+  .content-container {
+    height: 640px;
+    position: relative;
+  }
+
+  .content-container .content {
+    position: absolute;
+    top: 50%;
+    transform: translate(0, -50%);
+  }
+
+  .content-container .content h3 { margin-top: 0; }
+  
+  .image-container {
+    height: 640px;
+    text-align: center;
+    position: relative;
+  }
+
+  .image-container .image {
+    display: inline-block;
+    height: 250px;
+    width: 250px;
+    border-radius: 50%;
+    background: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: 2px solid black;
+  }
 }
 
 
-.content h4 { margin-top: 32px; }
 
-.content p { margin-top: 32px; }
 
-.content .image { 
-  margin-top: 32px;
-  display: inline-block;
-  border-radius: 50%;
-  background: white;
-  height: 100px; 
-  width: 100px;
-  background-position-y: 658px;
-}
 
 
 
