--- a/src/main.css
+++ b/src/main.css
@@ -80,28 +80,51 @@ h3 {
   background-size: cover;
   text-align: center;
   position: relative; }
+  .home .hero .content {
+    position: absolute;
+    display: inline-block;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); }
+  .home .hero .content h4 {
+    margin-top: 32px; }
+  .home .hero .content p {
+    margin-top: 32px; }
+  .home .hero .content .image {
+    margin-top: 32px;
+    display: inline-block;
+    border-radius: 50%;
+    background: white;
+    height: 100px;
+    width: 100px;
+    background-position-y: 658px; }
 
-.content {
-  position: absolute;
-  display: inline-block;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%); }
-
-.content h4 {
-  margin-top: 32px; }
-
-.content p {
-  margin-top: 32px; }
-
-.content .image {
-  margin-top: 32px;
-  display: inline-block;
-  border-radius: 50%;
-  background: white;
-  height: 100px;
-  width: 100px;
-  background-position-y: 658px; }
+.backgrounds {
+  height: 640px; }
+  .backgrounds .content-container {
+    height: 640px;
+    position: relative; }
+  .backgrounds .content-container .content {
+    position: absolute;
+    top: 50%;
+    transform: translate(0, -50%); }
+  .backgrounds .content-container .content h3 {
+    margin-top: 0; }
+  .backgrounds .image-container {
+    height: 640px;
+    text-align: center;
+    position: relative; }
+  .backgrounds .image-container .image {
+    display: inline-block;
+    height: 250px;
+    width: 250px;
+    border-radius: 50%;
+    background: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: 2px solid black; }
 
 .projects h1 {
   font-family: OpenSans-Bold;
@@ -262,9 +285,6 @@ p {
 
 .nav a.active {
   color: white; }
-
-html {
-  overflow-y: scroll; }
 
 .logo {
   display: inline-block;
