--- a/src/main.css
+++ b/src/main.css
@@ -100,6 +100,7 @@ h3 {
     background-position-y: 658px; }
 
 .backgrounds {
+  background-color: #f1f1f1;
   height: 640px; }
   .backgrounds .content-container {
     height: 640px;
@@ -123,8 +124,32 @@ h3 {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
-    border: 2px solid black; }
+    transform: translate(-50%, -50%); }
+
+.programmings {
+  background-color: #f6f6f6;
+  height: 640px; }
+  .programmings .content-container {
+    height: 640px;
+    position: relative; }
+  .programmings .content-container .content {
+    position: absolute;
+    top: 50%;
+    transform: translate(0, -50%); }
+  .programmings .content-container .content h3 {
+    margin-top: 0; }
+  .programmings .image-container {
+    height: 640px;
+    position: relative; }
+  .programmings .image-container .image {
+    background-color: white;
+    border-radius: 50%;
+    width: 250px;
+    height: 250px;
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%, -50%); }
 
 .projects h1 {
   font-family: OpenSans-Bold;
