made navigation bar responsive and added font awesome logos

--- a/src/app/home/html/home.html
+++ b/src/app/home/html/home.html
@@ -9,15 +9,21 @@
 			<h4> 
 				Front End Developer
 			</h4>
-			<p>
-				LinkedIn:
-			</p>
-			<p>
-				Github:
-			</p>
-			<p>
-				Email:
-			</p>
+
+			<div class="icon-container">
+				<div class="icon">
+					
+						<a href="#"><i class="fa fa-linkedin-square fa-3x"></i></a>
+					
+					
+						<a href="#"><i class="fa fa-github-square fa-3x"></i></a>
+					
+					
+						<a href="#"><i class="fa fa-envelope-o fa-3x"></i></a>
+					
+				</div>
+			</div>
+
 		</div>
 	</section>
 
@@ -44,7 +50,7 @@
 		</div>
 	</section>
 
-		<section class="programmings">
+	<section class="programmings">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6 col-xs-12 content-container">
