--- a/src/app/shared/scss/nav.scss
+++ b/src/app/shared/scss/nav.scss
@@ -1,4 +1,4 @@
-.navbar { height: 45px; text-align: left; position: fixed; z-index: 1; top: 0; width: 100% }
+//.navbar { height: 45px; text-align: left; position: fixed; z-index: 1; top: 0; width: 100% }
 .navbar a { color: #CCCCCC; cursor: pointer; text-decoration: none; text-transform: uppercase; 
 	transition: .5s all; }
 .navbar a:hover { color: #ecf0f1; }
