--- a/src/app/home/html/home.html
+++ b/src/app/home/html/home.html
@@ -2,28 +2,13 @@
 
 	<section class="hero">
 		<div class="content"> 
-			<h1> 
-				Yanwen Wang
-			</h1>
-			<div class="image"></div>	
-			<h4> 
-				Front End Developer
-			</h4>
-
-			<div class="icon-container">
-				<div class="icon">
-					
-						<a href="#"><i class="fa fa-linkedin-square fa-3x"></i></a>
-					
-					
-						<a href="#"><i class="fa fa-github-square fa-3x"></i></a>
-					
-					
-						<a href="#"><i class="fa fa-envelope-o fa-3x"></i></a>
-					
-				</div>
+			<h1>Yanwen Wang</h1>
+			<h4> Front End Developer</h4>
+			<div class="icon">
+				<a href="#"><i class="fa fa-linkedin-square fa-3x"></i></a>
+				<a href="#"><i class="fa fa-github-square fa-3x"></i></a>
+				<a href="#"><i class="fa fa-envelope-o fa-3x"></i></a>
 			</div>
-
 		</div>
 	</section>
 
@@ -72,6 +57,5 @@
 			</div>
 		</div>
 	</section>
-
 </div>
 
