--- a/src/app/home/scss/home.scss
+++ b/src/app/home/scss/home.scss
@@ -26,12 +26,15 @@ $screen-md-max:              ($screen-lg-min - 1) !default;
 
     @media screen and (min-width: $screen-md-min) {
       // laptops and desktop
+
       background: url('../content/images/skyline.jpg'); 
       background-size: cover;
-      height: 790px;
+      height: 640px;
       position: relative;
 
-      .content {
+      .content { 
+        border: 2px solid #f2f2f2;
+        padding: 30px 115px 30px 115px; 
         position: absolute;
         display: inline-block;
         top: 50%;
@@ -40,19 +43,16 @@ $screen-md-max:              ($screen-lg-min - 1) !default;
       }
     }
     
+    .content h1 { margin: 0; }
     .content h4 { margin-top: 32px; }
     
-    .content .icon { position: relative; margin-top: 32px; display: inline-block; opacity: .5; }
+    .content h1, 
+    .content h4 { letter-spacing: .1em; color: #f2f2f2; }
     
-    .content .image { 
-      margin-top: 32px;
-      display: inline-block;
-      border-radius: 50%;
-      background: white;
-      height: 100px; 
-      width: 100px;
-      background-position-y: 658px;
-    }
+    .content .icon { position: relative; margin-top: 32px; display: inline-block; opacity: .8; }
+    .content .icon .fa-linkedin-square { margin-left: 0; }
+    .content .icon .fa-github-square { margin-left: 29px; }
+    .content .icon .fa-envelope-o { margin-left: 29px; }
   }
 }
 /*
@@ -132,10 +132,13 @@ $screen-md-max:              ($screen-lg-min - 1) !default;
     }
 
   .image-container .image {
-    height: 250px;
-    width: 250px;
+    background: url('../content/images/profile.jpg');
+    background-size: cover;
+    display: inline-block;
+    background-position-y: -5px;
+    height: 350px;
+    width: 350px;
     border-radius: 50%;
-    background: white;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -170,10 +173,12 @@ $screen-md-max:              ($screen-lg-min - 1) !default;
 
   }
   .image-container .image {
-    background-color: white;
+    background: url('../content/images/desk.jpg');
+    background-size: cover;
+    background-position-y: -85px;
     border-radius: 50%;
-    width: 250px;
-    height: 250px;
+    width: 350px;
+    height: 350px;
     top: 50%;
     left: 50%;
     position: absolute;
