--- a/src/main.css
+++ b/src/main.css
@@ -80,29 +80,35 @@ h3 {
     .home .hero {
       background: url("../content/images/skyline.jpg");
       background-size: cover;
-      height: 790px;
+      height: 640px;
       position: relative; }
       .home .hero .content {
+        border: 2px solid #f2f2f2;
+        padding: 30px 115px 30px 115px;
         position: absolute;
         display: inline-block;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%); } }
+  .home .hero .content h1 {
+    margin: 0; }
   .home .hero .content h4 {
     margin-top: 32px; }
+  .home .hero .content h1,
+  .home .hero .content h4 {
+    letter-spacing: .1em;
+    color: #f2f2f2; }
   .home .hero .content .icon {
     position: relative;
     margin-top: 32px;
     display: inline-block;
-    opacity: .5; }
-  .home .hero .content .image {
-    margin-top: 32px;
-    display: inline-block;
-    border-radius: 50%;
-    background: white;
-    height: 100px;
-    width: 100px;
-    background-position-y: 658px; }
+    opacity: .8; }
+  .home .hero .content .icon .fa-linkedin-square {
+    margin-left: 0; }
+  .home .hero .content .icon .fa-github-square {
+    margin-left: 29px; }
+  .home .hero .content .icon .fa-envelope-o {
+    margin-left: 29px; }
 
 /*
 .home {
@@ -169,10 +175,13 @@ h3 {
       text-align: center;
       position: relative; }
     .backgrounds .image-container .image {
-      height: 250px;
-      width: 250px;
+      background: url("../content/images/profile.jpg");
+      background-size: cover;
+      display: inline-block;
+      background-position-y: -5px;
+      height: 350px;
+      width: 350px;
       border-radius: 50%;
-      background: white;
       position: absolute;
       top: 50%;
       left: 50%;
@@ -193,10 +202,12 @@ h3 {
       height: 640px;
       position: relative; }
     .programmings .image-container .image {
-      background-color: white;
+      background: url("../content/images/desk.jpg");
+      background-size: cover;
+      background-position-y: -85px;
       border-radius: 50%;
-      width: 250px;
-      height: 250px;
+      width: 350px;
+      height: 350px;
       top: 50%;
       left: 50%;
       position: absolute;
